--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="GkVIWf-WQAAcQZf.png" image/x-icon">
+    <link rel="shortcut icon" href="GkVIWf-WQAAcQZf.png" image/x-icon"> <!-- hina <3 -->
 </head>
 
 <body ondragstart="return false;" ondrop="return false;">
-    <div id="overlay" class="overlay"> <!-- cte page taken from my old site cshmark.xyz -->
+    <div id="overlay" class="overlay"> <!-- cte page taken from my old site -->
         <p>click to enter</p>
     </div>
     <div class="container">
@@ -33,4 +33,5 @@
         audio.play();
     });
 </script>
+
 </html>
